--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,7 @@ html {
 
 :root {
   --body-typeface: "Inter", sans-serif;
-  --heading-typeface: "Bungee";
+  --heading-typeface: "BBungee+Hairline";
   --project-title-typeface: "Eczar", serif;
   --background-color: #fdfdfd;
   --background-color-about: #f5f5f5;
