--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,7 @@ html {
 :root {
   --body-typeface: "Inter", sans-serif;
   --heading-typeface: "Bungee+Hairline";
-  --project-title-typeface: "Eczar", serif;
+  --project-title-typeface: "Bungee+Hairline";
   --background-color: #fdfdfd;
   --background-color-about: #f5f5f5;
   --background-color-footer: #f5f5f5;
