--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 
 /* TODO: Delete the Google Fonts below and add the Google Fonts you want to use on your site. Each Google font that you load will slightly increase the download speed of your site so make sure to only included necessary fonts here. */
 
-@import url("https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 
@@ -80,8 +80,8 @@ html {
 
 :root {
   --body-typeface: "Work+Sans":ital,wght@0,100..900;1,100..900&display;
-  --heading-typeface: "Bungee+Hairline";
-  --project-title-typeface: "Bungee+Hairline";
+  --heading-typeface: "Protest+Revolution&display";
+  --project-title-typeface: "Protest+Revolution&display";
   --background-color: #fdfdfd;
   --background-color-about: #f5f5f5;
   --background-color-footer: #f5f5f5;
