--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@ html {
 /* TODO: Adjust the variables below, create new variables as desired, and delete the variables that you do not want to use. */
 
 :root {
-  --body-typeface: "Work+Sans":ital,wght@0,100..900;1,100..900&display;
+  --body-typeface: "Work+Sans":100;
   --heading-typeface: "Protest+Revolution&display";
   --project-title-typeface: "Protest+Revolution&display";
   --background-color: #fdfdfd;
