--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@ html {
 /* TODO: Adjust the variables below, create new variables as desired, and delete the variables that you do not want to use. */
 
 :root {
-  --body-typeface: "Work+Sans", 100;
+  --body-typeface: "Work+Sans",100;
   --heading-typeface: "Protest+Revolution";
   --project-title-typeface: "Protest+Revolution";
   --background-color: #fdfdfd;
@@ -87,8 +87,8 @@ html {
   --background-color-footer: #f5f5f5;
   --alt-background-color: #000000;
   --background-color-holding-page: rgba(82, 0, 255, 0.6);
-  --h1-color: #5200ff;
-  --h2-color: #5200ff;
+  --h1-color: #ffee00;
+  --h2-color: #ffee00;
   --h3-color: #5200ff;
   --h4-color: #5200ff;
   --h5-color: #5200ff;
