--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@ html {
   --alt-background-color: #000000;
   --background-color-holding-page: rgba(82, 0, 255, 0.6);
   --h1-color: #ffee00;
-  --h2-color: #ffee00;
+  --h2-color: #17afcade;
   --h3-color: #5200ff;
   --h4-color: #5200ff;
   --h5-color: #5200ff;
