--- a/styles/style.css
+++ b/styles/style.css
@@ -80,8 +80,8 @@ html {
 
 :root {
   --body-typeface: "Work+Sans",0,100..900;
-  --heading-typeface: "Protest+Revolution";
-  --project-title-typeface: "Protest+Revolution";
+  --heading-typeface: "Protest+Revolution", display;
+  --project-title-typeface: "Protest+Revolution", display;
   --background-color: #fdfdfd;
   --background-color-about: #f5f5f5;
   --background-color-footer: #f5f5f5;
