--- a/styles/style.css
+++ b/styles/style.css
@@ -81,14 +81,14 @@ html {
 :root {
   --body-typeface: "Work+Sans",0,100..900;
   --heading-typeface: "Bungee+Hairline", 500;
-  --project-title-typeface: "Bungee+Hairline" 400;
+  --project-title-typeface: "Bungee+Hairline";
   --background-color: #fdfdfd;
   --background-color-about: #f5f5f5;
   --background-color-footer: #f5f5f5;
   --alt-background-color: #000000;
   --background-color-holding-page: rgba(82, 0, 255, 0.6);
-  --h1-color: #ffee00;
-  --h2-color: #17afcade;
+  --h1-color: #22b470da;
+  --h2-color: #22b470da;
   --h3-color: #5200ff;
   --h4-color: #5200ff;
   --h5-color: #5200ff;
