--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,7 @@ html {
 :root {
   --body-typeface: "Work+Sans",0,100..900;
   --heading-typeface: "Bungee+Hairline", 500;
-  --project-title-typeface: "Bungee+Hairline";
+  --project-title-typeface: "Bungee+Hairline", 500;
   --background-color: #fdfdfd;
   --background-color-about: #f5f5f5;
   --background-color-footer: #f5f5f5;
