--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,8 @@ html {
 :root {
   --body-typeface: "Work+Sans",0,100..900;
   --heading-typeface: "Bungee Hairline", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   --project-title-typeface: "Bungee Hairline", sans-serif;
   --background-color: #fdfdfd;
   --background-color-about: #f5f5f5;
