--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,8 @@ html {
   font-weight: 400;
   font-style: normal;
   --project-title-typeface: "Bungee Hairline", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   --background-color: #fdfdfd;
   --background-color-about: #f5f5f5;
   --background-color-footer: #f5f5f5;
