--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,7 @@ html {
 :root {
   --body-typeface: "Work Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: <100>;
   font-style: normal;
   --heading-typeface: "Bungee Hairline", sans-serif;
   font-weight: 400;
