--- a/styles/animated-gradient.css
+++ b/styles/animated-gradient.css
@@ -1,27 +1,20 @@
 :root {
-    --gradient: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
+    --gradient: linear-gradient(45deg,#22b470da,#FFDC18, #ffffff);
 }
 
 .gradient-animation {
-    background-size: 600%;
+    background-size: 400% 400%;
     background-image: var(--gradient);
-    animation: bg-animation 90s infinite alternate;
+    animation: bg-animation 90s ease infinite;
+    height: 100vh;
 }
 
 @keyframes bg-animation {
     0% {
-        background-position: 0;
+        background-position: 0 50%;
     }
     100% {
-        background-position: 100%;
+        background-position: 100% 50%;
     }
 }
 
-@keyframes bg-animation {
-    0% {
-        background-position: 0;
-    }
-    100% {
-        background-position: 100%;
-    }
-}
