--- a/styles/style.css
+++ b/styles/style.css
@@ -94,7 +94,7 @@ html {
   --background-color-footer: #f5f5f5;
   --alt-background-color: #000000;
   --background-color-holding-page: rgba(82, 0, 255, 0.6);
-  --h1-color: #000112;
+  --h1-color: #0c0c0c;
   --h2-color: #22b470da;
   --h3-color: #5200ff;
   --h4-color: #5200ff;
