--- a/styles/animated-gradient.css
+++ b/styles/animated-gradient.css
@@ -1,5 +1,5 @@
 :root {
-    --gradient: linear-gradient(-45deg,#3dabbeda,#ffe031fb, #d48a00);
+    --gradient: linear-gradient(-45deg,#55abc5,#ffe031fb, #d48a00);
 }
 
 .gradient-animation {
