--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 /*
 
@@ -83,39 +84,40 @@ html {
   font-optical-sizing: auto;
   font-weight: <100>;
   font-style: normal;
-  --heading-typeface: "Bungee Hairline", sans-serif;
+  --heading-typeface: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal;
+  --project-title-typeface: "Alfa Slab One", serif;
   font-weight: 400;
   font-style: normal;
-  --project-title-typeface: "Bungee Hairline", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  --background-color: #3366FF ;
-  --background-color-about: #3366FF;
-  --background-color-footer: #3366FF;
+  --background-color: #bbdefb ;
+  --background-color-about: #bbdefb;
+  --background-color-footer: #bbdefb;
   --alt-background-color: #000000;
   --background-color-holding-page: rgba(82, 0, 255, 0.6);
-  --h1-color: #3366FF;
-  --h2-color: darkred;
+  --h1-color: #FF0033;
+  --h2-color: #FF0033;
   --h3-color: darkred;
   --h4-color: darkred;
   --h5-color: darkred;
   --h6-color: darkred;
-  --primary-text-color: darkred;
+  --primary-text-color: #3366FF ;
   --holding-page-title-color: #ebedf0;
   --accent-color: #FF0000;
-  --overlay-color: #3366FF;
-  --overlay-title-color: #fef9e7;
-  --overlay-description-color: #fef9e7;
+  --overlay-color: #FF0033;
+  --overlay-title-color: #ebedf0;
+  --overlay-description-color: #ebedf0;
   --hyperlink-color: #FF0000;
   --hyperlink-alternate-color: orangered;
-  --hover-color: darkred;
+  --hover-color: #3366FF ;
   --visited-color: #FF0033;
-  --project-title-color: #FF0000;
-  --project-sidebar-background-color: #fef9e7;
-  --project-sidebar-text-color: darkred;
+  --project-title-color: #FF0033;
+  --project-sidebar-background-color: #bbdefb;
+  --project-sidebar-text-color: #3366FF;
   --heart-color: darkred;
-  --holding-page-footer-color: #fef9e7;
-  --text-selection-background-color: #ffeb3b;
+  --holding-page-footer-color: #ebedf0;
+  --text-selection-background-color: #FF0033;
   --linear-gradient-color-1: #ff057c;
   --linear-gradient-color-2: #8d0b93;
   --linear-gradient-color-3: #321575;
@@ -170,7 +172,7 @@ svg {
 */
 
 h1 {
-  font-size: 2rem;
+  font-size: 10rem;
   font-family: var(--heading-typeface);
   margin-bottom: 1rem;
   color: var(--h1-color);
@@ -325,6 +327,8 @@ a:active {
   margin-bottom: 1rem;
 }
 
+
+
 /* Hero 
 
 ██   ██ ███████ ██████   ██████  
@@ -353,7 +357,7 @@ a:active {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 2rem;
   align-items: flex-start;
 }
 
