--- a/styles/style.css
+++ b/styles/style.css
@@ -84,9 +84,8 @@ html {
   font-optical-sizing: auto;
   font-weight: <100>;
   font-style: normal;
-  --heading-typeface: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 900;
+  --heading-typeface: "Alfa Slab One", serif;
+  font-weight: 400;
   font-style: normal;
   --project-title-typeface: "Alfa Slab One", serif;
   font-weight: 400;
