--- a/styles/style.css
+++ b/styles/style.css
@@ -90,6 +90,11 @@ html {
   --project-title-typeface: "Alfa Slab One", serif;
   font-weight: 400;
   font-style: normal;
+  --subtitle-typeface: 
+  --body-typeface: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <600>;
+  font-style: normal;
   --background-color: #bbdefb ;
   --background-color-about: #bbdefb;
   --background-color-footer: #bbdefb;
@@ -97,7 +102,7 @@ html {
   --background-color-holding-page: rgba(82, 0, 255, 0.6);
   --h1-color: #FF0033;
   --h2-color: #FF0033;
-  --h3-color: darkred;
+  --h3-color: #FF0033;
   --h4-color: darkred;
   --h5-color: darkred;
   --h6-color: darkred;
@@ -175,6 +180,7 @@ h1 {
   font-family: var(--heading-typeface);
   margin-bottom: 1rem;
   color: var(--h1-color);
+  line-height: 6.5rem;
 }
 
 h2 {
@@ -186,6 +192,7 @@ h2 {
 
 h3 {
   font-size: 1.325rem;
+  font-family: var(--subtitle-typeface);
   margin-bottom: 1rem;
   line-height: 1.3;
   color: var(--h3-color);
