--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,6 @@ html {
 
 :root {
   --body-typeface: "Work Sans", sans-serif;
-  font-optical-sizing: auto;
   font-weight: <100>;
   font-style: normal;
   --heading-typeface: "Alfa Slab One", serif;
@@ -90,11 +89,9 @@ html {
   --project-title-typeface: "Alfa Slab One", serif;
   font-weight: 400;
   font-style: normal;
-  --subtitle-typeface: 
-  --body-typeface: "Work Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <600>;
-  font-style: normal;
+  --subtitle-typeface: "Work Sans", sans-serif;
+  font-weight: 600;
+  font-style: thin;
   --background-color: #bbdefb ;
   --background-color-about: #bbdefb;
   --background-color-footer: #bbdefb;
