--- a/styles/animated-gradient.css
+++ b/styles/animated-gradient.css
@@ -1,21 +1,19 @@
 :root {
-    --gradient: linear-gradient(-45deg,#bbdefb 
-    , #bbdefb     );
+  --gradient: linear-gradient(-45deg, #bbdefb, #abbfcf);
 }
 
 .gradient-animation {
-    background-size: 400% 400%;
-    background-image: var(--gradient);
-    animation: bg-animation 90s ease infinite;
-    height: 100vh;
+  background-size: 400% 400%;
+  background-image: var(--gradient);
+  animation: bg-animation 90s ease infinite;
+  height: 100vh;
 }
 
 @keyframes bg-animation {
-    0% {
-        background-position: 0 50%;
-    }
-    100% {
-        background-position: 100% 50%;
-    }
+  0% {
+    background-position: 0 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
-
