--- a/styles/animated-gradient.css
+++ b/styles/animated-gradient.css
@@ -1,5 +1,5 @@
 :root {
-  --gradient: linear-gradient(-45deg, #bbdefb, #abbfcf);
+  --gradient: linear-gradient(-45deg, #fef5e7;, #fef5e7;);
 }
 
 .gradient-animation {
