--- a/styles/style.css
+++ b/styles/style.css
@@ -91,11 +91,11 @@ html {
   font-style: normal;
   --subtitle-typeface: "Work Sans", sans-serif;
   font-weight: 600;
-  --background-color: #bbdefb ;
-  --background-color-about: #bbdefb;
-  --background-color-footer: #bbdefb;
+  --background-color: #fef5e7;
+  --background-color-about: #fef5e7;
+  --background-color-footer: #fef5e7;
   --alt-background-color: #000000;
-  --background-color-holding-page: rgba(82, 0, 255, 0.6);
+  --background-color-holding-page: #fef5e7;
   --h1-color: #FF0033;
   --h2-color: #FF0033;
   --h3-color: #FF0033;
@@ -103,20 +103,20 @@ html {
   --h5-color: darkred;
   --h6-color: darkred;
   --primary-text-color: #3366FF ;
-  --holding-page-title-color: #ebedf0;
-  --accent-color: #FF0000;
+  --holding-page-title-color: #FF0033;
+  --accent-color: #FF0033;
   --overlay-color: #FF0033;
-  --overlay-title-color: #ebedf0;
-  --overlay-description-color: #ebedf0;
-  --hyperlink-color: #FF0000;
+  --overlay-title-color: #fef5e7;
+  --overlay-description-color: #fef5e7;
+  --hyperlink-color: #FF0033;
   --hyperlink-alternate-color: orangered;
   --hover-color: #3366FF ;
   --visited-color: #FF0033;
   --project-title-color: #FF0033;
-  --project-sidebar-background-color: #bbdefb;
+  --project-sidebar-background-color: #fef5e7;
   --project-sidebar-text-color: #3366FF;
   --heart-color: darkred;
-  --holding-page-footer-color: #ebedf0;
+  --holding-page-footer-color: #fef5e7;
   --text-selection-background-color: #FF0033;
   --linear-gradient-color-1: #ff057c;
   --linear-gradient-color-2: #8d0b93;
@@ -603,8 +603,6 @@ a:active {
 
 .project-image {
   width: 100%;
-  min-height: 50vh;
-  /* TODO: Delete min-height if you want to remove space between project images on project pages on mobile devices. It is used for the demo page only. */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -649,7 +647,7 @@ a:active {
   width: 100%;
   min-height: 100vh;
   /* TODO: Delete the following if you do not want a grainy gradient background on index.html. Be careful not to delete the closing } */
-  background: linear-gradient(0deg, rgba(0, 0, 0, 1), var(--background-color-holding-page)), url(/assets/temp/noise.svg);
+  background-color: var(--background-color-holding-page)), url(/assets/temp/noise.svg);
   /* For more on grainy gradients see https://grainy-gradients.vercel.app/ */
 }
 
@@ -671,7 +669,7 @@ a:active {
 
 .holding-page-copyright {
   font-size: 0.8rem;
-  color: var(--holding-page-footer-color);
+  color:#3366FF; 
   margin-bottom: 0;
 }
 
