--- a/styles/style.css
+++ b/styles/style.css
@@ -400,6 +400,11 @@ a:active {
   padding: 1rem;
 }
 
+.hero-background {
+  background-size: 400% 400%;
+  height: 100vh;
+}
+
 /* Work Page Layout
 
 ██     ██  ██████  ██████  ██   ██     ██████   █████   ██████  ███████ 
@@ -425,6 +430,7 @@ a:active {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 1rem;
+  object-fit: contain;
   /* Magical, media-query-less responsiveness is achieved using the repeat() function and the auto placement keywords. To achieve wrapping, we can use the auto-fit. If you're using auto-fit, the content will stretch to fill the entire row width.  Specify a minimum width for the columns, using the minmax() function. The 1fr is what tells the browser to distribute the space between the columns so that each column equally gets one fraction of that space.  */
 }
 
@@ -459,7 +465,11 @@ a:active {
   visibility: visible;
   opacity: 0.8;
 }
-
+.photo > img {
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
+}
 /* 
 
  █████  ██████   ██████  ██    ██ ████████ 
