--- a/styles/style.css
+++ b/styles/style.css
@@ -83,14 +83,14 @@ html {
   --body-typeface: "Work Sans", sans-serif;
   font-weight: <100>;
   font-style: normal;
-  --heading-typeface: "Alfa Slab One", serif;
-  font-weight: 400;
-  font-style: normal;
-  --project-title-typeface: "Alfa Slab One", serif;
-  font-weight: 400;
+  --heading-typeface: "Work Sans", sans-serif;
+  font-weight: <900>;
+  font-style: thin;
+  --project-title-typeface: "Work Sans", sans-serif;
+  font-weight: <600>;
   font-style: normal;
   --subtitle-typeface: "Work Sans", sans-serif;
-  font-weight: 600;
+  font-weight: <400>;
   --background-color: #fef5e7;
   --background-color-about: #fef5e7;
   --background-color-footer: #fef5e7;
