--- a/styles/style.css
+++ b/styles/style.css
@@ -84,13 +84,14 @@ html {
   font-weight: <100>;
   font-style: normal;
   --heading-typeface: "Work Sans", sans-serif;
-  font-weight: <900>;
+  font-weight: <800>;
   font-style: thin;
   --project-title-typeface: "Work Sans", sans-serif;
   font-weight: <600>;
-  font-style: normal;
+  font-style: thin;
   --subtitle-typeface: "Work Sans", sans-serif;
-  font-weight: <400>;
+  font-weight: <200>;
+  font-style: thin; 
   --background-color: #fef5e7;
   --background-color-about: #fef5e7;
   --background-color-footer: #fef5e7;
@@ -174,6 +175,7 @@ svg {
 h1 {
   font-size: 5rem;
   font-family: var(--heading-typeface);
+  font-style: thin;
   margin-bottom: 1rem;
   color: var(--h1-color);
   line-height: 6.5rem;
@@ -189,7 +191,7 @@ h2 {
 h3 {
   font-size: 1.325rem;
   font-family: var(--subtitle-typeface);
-  font-style: italic;
+  font-style: bold;
   margin-bottom: 1rem;
   line-height: 1.3;s
   color: var(--h3-color);
@@ -344,7 +346,7 @@ a:active {
 */
 
 .hero {
-  min-height: 80vh;
+  min-height: 120vh;
   display: flex;
   flex-direction: column;
 }
