--- a/styles/style.css
+++ b/styles/style.css
@@ -774,6 +774,10 @@ background-size: cover;
   transition-timing-function: ease-in-out;
   }
 
+  a#logo:hover{
+    color: black;
+  }
+  
   .empty {
     fill: none;
   }
