--- a/styles/style.css
+++ b/styles/style.css
@@ -398,7 +398,7 @@ background-size: cover;
   display: flex;
   flex-direction: column;
   flex: 1;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   padding: 2rem 4rem;
   text-align: center;
