--- a/styles/style.css
+++ b/styles/style.css
@@ -262,9 +262,18 @@ em {
   color: var(--overlay-description-color);
 }
 
-.h7:hover {
-  color: #8d0b93;
-}
+.h3:hover {
+  opacity: 0.2;
+    transition: 0.3s;
+    -webkit-transition: 170ms ease-in-out;
+    -moz-transition: 170ms ease-in-out;
+    -ms-transition: 170ms ease-in-out;
+    -o-transition: 170ms ease-in-out;
+    transition: 170ms ease-in-out;
+    transition-duration: 170ms;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0s;
+  } 
 
 /* Hyperlink Styles */
 
