--- a/styles/style.css
+++ b/styles/style.css
@@ -262,7 +262,7 @@ em {
   color: var(--overlay-description-color);
 }
 
-.h3:hover {
+h3:hover {
   opacity: 0.2;
     transition: 0.3s;
     -webkit-transition: 170ms ease-in-out;
