--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@ html {
   --h4-color: #D31919 ;
   --h5-color: #D31919 ;
   --h6-color: #D31919 ;
-  --primary-text-color: darkgrey ;
+  --primary-text-color: #D31919 ;
   --holding-page-title-color: #3366FF ;
   --accent-color: #3366FF ;
   --overlay-color: #D31919;
