--- a/styles/style.css
+++ b/styles/style.css
@@ -264,7 +264,16 @@ em {
 }
 
 h1:hover{
-  transform: scale(1.5);
+  opacity: 0.2;
+    transition: 0.3s;
+    -webkit-transition: 170ms ease-in-out;
+    -moz-transition: 170ms ease-in-out;
+    -ms-transition: 170ms ease-in-out;
+    -o-transition: 170ms ease-in-out;
+    transition: 170ms ease-in-out;
+    transition-duration: 170ms;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0s;
 }
 
 h3:hover {
