--- a/styles/style.css
+++ b/styles/style.css
@@ -276,6 +276,10 @@ h1:hover{
     transition-delay: 0s;
 }
 
+h2:hover{
+  transform:unset;
+}
+
 h3:hover {
   opacity: 0.2;
     transition: 0.3s;
