--- a/styles/style.css
+++ b/styles/style.css
@@ -264,16 +264,6 @@ em {
 }
 
 h1:hover{
-  opacity: 0.2;
-    transition: 0.3s;
-    -webkit-transition: 170ms ease-in-out;
-    -moz-transition: 170ms ease-in-out;
-    -ms-transition: 170ms ease-in-out;
-    -o-transition: 170ms ease-in-out;
-    transition: 170ms ease-in-out;
-    transition-duration: 170ms;
-    transition-timing-function: ease-in-out;
-    transition-delay: 0s;
   color: #3366FF;
 }
 
@@ -282,6 +272,10 @@ h2:hover{
 }
 
 h3:hover {
+color: #3366FF;
+}
+
+/*
   opacity: 0.2;
     transition: 0.3s;
     -webkit-transition: 170ms ease-in-out;
@@ -292,7 +286,7 @@ h3:hover {
     transition-duration: 170ms;
     transition-timing-function: ease-in-out;
     transition-delay: 0s;
-  } 
+    */
 
 /* Hyperlink Styles */
 
