--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@ html {
   --logo-hover-color: black ;
   --hyperlink-alternate-color: orangered;
   --hover-color: #D31919 ;
-  --visited-color: #3366FF ;
+  --visited-color: orange;
   --project-title-color: #3366FF;
   --project-sidebar-background-color: #FFFCEF;
   --project-sidebar-text-color: #3366FF;
