--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,7 @@ html {
   --overlay-color: #D31919;
   --overlay-title-color: #FFFCEF;
   --overlay-description-color: #FFFCEF;
-  --hyperlink-color: #3366FF ;
+  --hyperlink-color: #D31919 ;
   --logo-hover-color: black ;
   --hyperlink-alternate-color: orangered;
   --hover-color: #D31919 ;
