--- a/styles/style.css
+++ b/styles/style.css
@@ -113,7 +113,7 @@ html {
   --hyperlink-color: #D31919 ;
   --logo-hover-color: black ;
   --hyperlink-alternate-color: orangered;
-  --hover-color: #D31919 ;
+  --hover-color: #708090 ;
   --visited-color: #708090;
   --project-title-color: #3366FF;
   --project-sidebar-background-color: #FFFCEF;
