--- a/styles/style.css
+++ b/styles/style.css
@@ -106,8 +106,8 @@ html {
   --h6-color: #D31919 ;
   --primary-text-color: #D31919 ;
   --holding-page-title-color: #708090 ;
-  --accent-color: #708090 ;
-  --overlay-color: #D31919;
+  --accent-color: #E5E4E2 ;
+  --overlay-color: #708090;
   --overlay-title-color: #FFFCEF;
   --overlay-description-color: #FFFCEF;
   --hyperlink-color: #D31919 ;
