--- a/styles/style.css
+++ b/styles/style.css
@@ -845,6 +845,7 @@ background-size: cover;
     justify-content: space-between;
     align-content: center;
     padding: 15rem;
+    text-align: center;
   }
 
   .about {
