--- a/styles/style.css
+++ b/styles/style.css
@@ -499,8 +499,12 @@ background-size: cover;
   flex-direction: column;
   justify-content: space-between;
   align-content: center;
-  padding: 20, 15,20,15;
+  margin-top: 5rem;
+  margin-left: 15rem;
+  margin-bottom: 5rem;
+  margin-right: 15rem;
   text-align: center;
+
 }
 
 /* Overlay */
