--- a/styles/style.css
+++ b/styles/style.css
@@ -601,12 +601,12 @@ background-size: cover;
 
 .footer-item-2 {
   grid-column: 1 / 2;
-  grid-row: 1 / 2;
+  grid-row: 2 / 3;
 }
 
 .footer-item-3 {
   grid-column: 1 / 2;
-  grid-row: 2/ 2;
+  grid-row: 3 / 4;
 }
 
 .footer-item-4 {
@@ -857,7 +857,7 @@ background-size: cover;
     flex-direction: column;
     justify-content: space-between;
     align-content: center;
-  margin: 2rem;
+    padding: 20, 15,20,15;
     text-align: center;
   }
 
