fixing footer to center

--- a/styles/style.css
+++ b/styles/style.css
@@ -476,7 +476,7 @@ background-size: cover;
 .portfolio,
 .project-wrapper {
   padding: 0.25rem;
-  border-radius: 25px;
+  
 }
 
 /* Defining the work page grid */
@@ -598,16 +598,19 @@ background-size: cover;
 .footer-item-1 {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+  text-align: center;
 }
 
 .footer-item-2 {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
+  text-align: center;
 }
 
 .footer-item-3 {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
+  text-align: center;
 }
 
 .footer-item-4 {
