--- a/styles/style.css
+++ b/styles/style.css
@@ -884,16 +884,19 @@ background-size: cover;
   .footer-item-1 {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+    padding: 3rem;
   }
 
   .about-item-2 {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
+    
   }
 
   .footer-item-2 {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
+    padding: 3rem;
   }
 
   .about-item-3 {
@@ -904,6 +907,7 @@ background-size: cover;
   .footer-item-3 {
     grid-row: 1 / 2;
     grid-column: 3 / 4;
+    padding: 3rem;
   }
 
   .about-item-4 {
