--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ html {
   --h5-color: #D31919 ;
   --h6-color: #D31919 ;
   --primary-text-color: #D31919 ;
-  --holding-page-title-color: #708090 ;
+  --holding-page-title-color: #D31919  ;
   --accent-color: #E5E4E2 ;
   --overlay-color: #708090;
   --overlay-title-color: #FFFCEF;
