--- a/styles/style.css
+++ b/styles/style.css
@@ -754,7 +754,7 @@ background-size: cover;
 
 .holding-page-copyright {
   font-size: 0.8rem;
-  color:#3366FF; 
+  color: #D31919; 
   margin-bottom: 0;
 }
 
