--- a/styles/style.css
+++ b/styles/style.css
@@ -805,6 +805,7 @@ background-size: cover;
 /* Medium devices (tablets, 768px and up) */
 
 @media (min-width: 768px) {
+  h1 {5rem}
   /* TODO: Add styles here for medium devices. */
 }
 
