--- a/styles/style.css
+++ b/styles/style.css
@@ -820,6 +820,16 @@ background-size: cover;
     font-size: 3rem;
     line-height: 4rem;
   }
+  .hero-headline-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 2rem;
+    text-align: center;
+    height: 50vh;
+  }
 }
 
 
