--- a/styles/style.css
+++ b/styles/style.css
@@ -830,6 +830,11 @@ background-size: cover;
     text-align: center;
     height: 50vh;
   }
+  .footer-item-4 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 4;
+    text-align: center;
+  }
 }
 
 
