--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ html {
   --primary-text-color: #D31919 ;
   --holding-page-title-color: #D31919  ;
   --accent-color: #E5E4E2 ;
-  --overlay-color: #708090;
+  --overlay-color: #D31919;
   --overlay-title-color: #FFFCEF;
   --overlay-description-color: #FFFCEF;
   --hyperlink-color: #D31919 ;
