--- a/styles/style.css
+++ b/styles/style.css
@@ -115,9 +115,9 @@ html {
   --hyperlink-alternate-color: orangered;
   --hover-color: #708090 ;
   --visited-color: #708090;
-  --project-title-color: #3366FF;
+  --project-title-color: #D31919;
   --project-sidebar-background-color: #FFFCEF;
-  --project-sidebar-text-color: #3366FF;
+  --project-sidebar-text-color: #D31919;
   --heart-color: #D31919;
   --holding-page-footer-color: #FFFCEF;
   --text-selection-background-color: #FF0033;
