--- a/styles/style.css
+++ b/styles/style.css
@@ -10,11 +10,11 @@
 
 /* TODO: Delete the Google Fonts below and add the Google Fonts you want to use on your site. Each Google font that you load will slightly increase the download speed of your site so make sure to only included necessary fonts here. */
 
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bahiana&display=swap'); 
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bahiana&display=swap");
 /*
 
 Imported stylesheets. Remove the ones you do not want to use.
@@ -55,10 +55,7 @@ No media query for `xs` since this is the default in Bootstrap
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  cursor: url("data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%23000000" width="20px" height="20px" viewBox="0 0 10.04 10.04"><circle cx="5.02" cy="5.02" r="4.52"/></svg>"), auto !important;
-  /* TODO: Change the url above to add a custom cursor. Delete the line above if you want to use the default browser cursor. */
 }
-
 
 *,
 *:before,
@@ -82,46 +79,37 @@ html {
 
 :root {
   --body-typeface: "Work Sans", sans-serif;
-  font-weight: 100;
-  font-style: normal;
   --heading-typeface: "Work Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 900;
-  font-style: normal;
   --project-title-typeface: "Work Sans", sans-serif;
-  font-weight: 600;
-  font-style: thin;
   --subtitle-typeface: "Work Sans", sans-serif;
-  font-weight: 200;
-  font-style: thin; 
-  --background-color: #FFFCEF;
-  --background-color-about: #FFFCEF;
-  --background-color-footer: #FFFCEF;
+  --background-color: #fffcef;
+  --background-color-about: #fffcef;
+  --background-color-footer: #fffcef;
   --alt-background-color: #000000;
-  --background-color-holding-page: #FFFCEF;
-  --h1-color: #D31919;
-  --h2-color: #D31919;
-  --h3-color: #D31919;
-  --h4-color: #D31919 ;
-  --h5-color: #D31919 ;
-  --h6-color: #D31919 ;
-  --primary-text-color: #D31919 ;
-  --holding-page-title-color: #D31919  ;
-  --accent-color: #E5E4E2 ;
-  --overlay-color: #D31919;
-  --overlay-title-color: #FFFCEF;
-  --overlay-description-color: #FFFCEF;
-  --hyperlink-color: #D31919 ;
-  --logo-hover-color: #D31919  ;
+  --background-color-holding-page: #fffcef;
+  --h1-color: #d31919;
+  --h2-color: #d31919;
+  --h3-color: #d31919;
+  --h4-color: #d31919;
+  --h5-color: #d31919;
+  --h6-color: #d31919;
+  --primary-text-color: #d31919;
+  --holding-page-title-color: #d31919;
+  --accent-color: #0b0b0b;
+  --overlay-color: #d31919;
+  --overlay-title-color: #fffcef;
+  --overlay-description-color: #fffcef;
+  --hyperlink-color: #d31919;
+  --logo-hover-color: #d31919;
   --hyperlink-alternate-color: orangered;
-  --hover-color: #708090 ;
+  --hover-color: #708090;
   --visited-color: #708090;
-  --project-title-color: #D31919;
-  --project-sidebar-background-color: #FFFCEF;
-  --project-sidebar-text-color: #D31919;
-  --heart-color: #D31919;
-  --holding-page-footer-color: #FFFCEF;
-  --text-selection-background-color: #FF0033;
+  --project-title-color: #d31919;
+  --project-sidebar-background-color: #fffcef;
+  --project-sidebar-text-color: #d31919;
+  --heart-color: #d31919;
+  --holding-page-footer-color: #fffcef;
+  --text-selection-background-color: #ff0033;
   --linear-gradient-color-1: #ff057c;
   --linear-gradient-color-2: #8d0b93;
   --linear-gradient-color-3: #321575;
@@ -189,15 +177,15 @@ h2 {
   font-size: 2.25rem;
   font-family: var(--heading-typeface);
   margin-bottom: 1rem;
-  color: var(--h2-color);=
+  color: var(--h2-color);
 }
 
 h3 {
   font-size: 1.325rem;
   font-family: var(--subtitle-typeface);
-  font-style: bold;
+  font-weight: bold;
   margin-bottom: 1rem;
-  line-height: 1.3;s
+  line-height: 1.3;
   color: var(--h3-color);
 }
 
@@ -222,7 +210,7 @@ h6 {
 h7 {
   font-size: 9rem;
   font-family: var(--heading-typeface);
-  float:right;
+  float: right;
   margin-bottom: 1rem;
   color: var(--h1-color);
   line-height: 10rem;
@@ -247,16 +235,6 @@ em {
   color: var(--overlay-color);
 }
 
-.project-title {
-  font-size: 3.725rem;
-  line-height: 1.2;
-  font-family: var(--project-title-typeface);
-  color: var(--project-title-color);
-  margin-bottom: 1rem;
-  padding: 2rem;
-  text-align: center;
-}
-
 .overlay-title {
   font-size: 2.875rem;
   color: var(--overlay-title-color);
@@ -266,16 +244,16 @@ em {
   color: var(--overlay-description-color);
 }
 
-h1:hover{
+h1:hover {
   color: #708090;
 }
 
-h2:hover{
+h2:hover {
   color: #708090;
 }
 
 h3:hover {
-color: #708090;
+  color: #708090;
 }
 
 /*
@@ -305,7 +283,7 @@ a:visited {
 a:hover {
   color: var(--hover-color);
   text-decoration: underline;
-  transition:linear;
+  transition: linear;
 }
 
 a:focus {
@@ -367,15 +345,32 @@ a:active {
   margin-left: 1.2rem;
 }
 
-.project-description {
-  font-size: 1.225rem;
+.project-title {
+  font-size: 7rem;
   line-height: 1.2;
+  font-family: var(--project-title-typeface);
+  color: var(--project-title-color);
   margin-bottom: 1rem;
-  padding: 2rem;
   text-align: center;
+  text-transform: uppercase;
+  font-weight: 200;
 }
 
-
+.project-summary {
+  font-size: 2.2rem;
+  line-height: 1.2;
+  margin-bottom: 4rem;
+  text-align: center;
+  font-weight: 400;
+  color: var(--accent-color);
+}
+.project-description {
+  font-size: 1.525rem;
+  line-height: 1.4;
+  text-align: center;
+  width: 60%;
+  margin: 0 auto;
+}
 
 /* Hero 
 
@@ -387,7 +382,6 @@ a:active {
                                  
 */
 
-
 /*
 .background-hero-animation {
 background: url(../assets/hero-page-animation/sophia-spanos-mcgill-sunset-animation-digital-illustration-bike.svg);
@@ -396,10 +390,10 @@ background-size: cover;
 }
 */
 
-.bckground-hero-image{
+.bckground-hero-image {
   background: url(../assets/branding-images/sophiaspanosmcgill_heropage_illustration.jpg);
   background-repeat: no-repeat;
-background-size: cover;
+  background-size: cover;
 }
 
 .hero {
@@ -429,8 +423,6 @@ background-size: cover;
   /* TODO: Adjust the width of the logo on mobile devices here. */
 }
 
-
-
 .hero-headline-wrapper {
   display: flex;
   flex-direction: column;
@@ -441,8 +433,6 @@ background-size: cover;
   text-align: center;
   height: 150vh;
 }
-
-
 
 .hero-icon {
   font-size: 4rem;
@@ -486,7 +476,6 @@ background-size: cover;
 .project-wrapper {
   padding: 0.25rem;
   align-items: center;
-  
 }
 
 /* Defining the work page grid */
@@ -505,7 +494,7 @@ background-size: cover;
   /* Required to contain overlay size */
 }
 
-.work-page-central{
+.work-page-central {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -515,7 +504,6 @@ background-size: cover;
   margin-bottom: 5rem;
   margin-right: 15rem;
   text-align: center;
-
 }
 
 /* Overlay */
@@ -670,11 +658,18 @@ background-size: cover;
 .project-aside {
   width: 100%;
   padding: 3rem;
-  margin-right: 4rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: var(--project-sidebar-text-color);
-  background: var(--project-sidebar-background-color);
+}
+
+.project-info {
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  margin-bottom: 2rem;
 }
 
 .project-navigation {
@@ -703,8 +698,6 @@ background-size: cover;
   justify-content: center;
 }
 
-
-
 .text-section {
   width: 100%;
 }
@@ -720,7 +713,6 @@ background-size: cover;
 .project-details {
   width: 100%;
   padding: 1rem;
-
 }
 
 /* 
@@ -743,8 +735,7 @@ background-size: cover;
   width: 100%;
   min-height: 100vh;
   /* TODO: Delete the following if you do not want a grainy gradient background on index.html. Be careful not to delete the closing } */
-  background-color: var(--background-color-holding-page)), url(/assets/temp/noise.svg);
-  /* For more on grainy gradients see https://grainy-gradients.vercel.app/ */
+  background-color: var(--background-color-holding-page);
 }
 
 .holding-page-animation {
@@ -756,7 +747,7 @@ background-size: cover;
   color: var(--holding-page-title-color);
 }
 
-.holding-page-inner-container{
+.holding-page-inner-container {
   align-items: center;
 }
 
@@ -769,7 +760,7 @@ background-size: cover;
 
 .holding-page-copyright {
   font-size: 0.8rem;
-  color: #D31919; 
+  color: #d31919;
   margin-bottom: 0;
 }
 
@@ -819,8 +810,6 @@ background-size: cover;
 
 /* Medium devices (tablets, 768px and up) */
 
-
-
 @media (min-width: 200px) {
   h1 {
     font-size: 3rem;
@@ -842,7 +831,6 @@ background-size: cover;
     text-align: center;
   }
 }
-
 
 @media (min-width: 600px) {
   h1 {
@@ -890,11 +878,8 @@ background-size: cover;
   .logo {
     width: 8rem;
     transition: 200ms;
-  transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out;
   }
-
-  
-
 
   .hero {
     min-height: 100vh;
@@ -926,7 +911,6 @@ background-size: cover;
     filter: grayscale(0);
   }
 
-
   .about {
     padding: 4rem;
     grid-template-columns: 1fr 1fr 1fr;
@@ -951,7 +935,6 @@ background-size: cover;
   .about-item-2 {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-    
   }
 
   .footer-item-2 {
@@ -994,7 +977,6 @@ background-size: cover;
   /* Project Page Flex Direction on Large Devices */
   .project-wrapper {
     flex-direction: column;
-
   }
 
   /* Sidebar on Large Devices */
