--- a/styles/style.css
+++ b/styles/style.css
@@ -865,10 +865,12 @@ background-size: cover;
   h1 {
     font-size: 7rem;
     line-height: 9rem;
+    font-weight: 100;
   }
 
   h2 {
     font-size: 2.25rem;
+    font-weight: 500;
   }
 
   h3 {
