photos for potp

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@ html {
   --subtitle-typeface: "Work Sans", sans-serif;
   --background-color: #fffcef;
   --background-color-about: #fffcef;
-  --background-color-footer: #fffcef;
+  --background-color-footer: yellow;
   --alt-background-color: #000000;
   --background-color-holding-page: #fffcef;
   --h1-color: #d31919;
