--- a/styles/style.css
+++ b/styles/style.css
@@ -89,7 +89,7 @@ html {
   --background-color-holding-page: #fffcef;
   --h1-color: #22256c;
   --h2-color: #d31919;
-  --h3-color: #d31919;
+  --h3-color: #38429b;
   --h4-color: #d31919;
   --h5-color: #d31919;
   --h6-color: #d31919;
