--- a/styles/style.css
+++ b/styles/style.css
@@ -95,8 +95,8 @@ html {
   --h6-color: #d31919;
   --primary-text-color: #d31919;
   --holding-page-title-color: #d31919;
-  --accent-color: #0b0b0b;
-  --overlay-color: #d31919;
+  --accent-color: #c15f06;
+  --overlay-color: #ffd601;
   --overlay-title-color: #fffcef;
   --overlay-description-color: #fffcef;
   --hyperlink-color: #d31919;
