--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ html {
   --accent-color: #c15f06;
   --overlay-color: #ffd601;
   --overlay-title-color: #fffcef;
-  --overlay-description-color: #fffcef;
+  --overlay-description-color: #22256c;
   --hyperlink-color: #d31919;
   --logo-hover-color: #d31919;
   --hyperlink-alternate-color: orangered;
