--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,7 @@ html {
   --holding-page-title-color: #d31919;
   --accent-color: #c15f06;
   --overlay-color: #ffd601;
-  --overlay-title-color: #fffcef;
+  --overlay-title-color: #38429b;
   --overlay-description-color: #22256c;
   --hyperlink-color: #d31919;
   --logo-hover-color: #d31919;
