--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@ html {
   --heading-typeface: "Work Sans", sans-serif;
   --project-title-typeface: "Work Sans", sans-serif;
   --subtitle-typeface: "Work Sans", sans-serif;
-  --background-color: #f3f3ce;
+  --background-color: #f0f0c9;
   --background-color-about: #fffcef;
   --background-color-footer: grey;
   --alt-background-color: #000000;
